--- a/doc/md/01 ES6/01-作用域.md
+++ b/doc/md/01 ES6/01-作用域.md
@@ -1,4 +1,4 @@
-## 作用域
+## #作用域
 
 
 
@@ -8,4 +8,19 @@
 
 ---
 
-### 1. 作用域
+### 1. 全局作用域
+
+
+
+### 2. 函数作用域
+
+
+
+### 3. 块级作用域
+
+
+
+### 4. 动态作用域
+
+
+
